--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         const modelos = [
             // Mude os nomes 'modelo1.glb', 'modelo2.glb', etc., para os nomes exatos dos seus ficheiros.
             { id: "Mesa", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/stitch_ar.glb" },
-            { id: "Cadeira", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/modelo2.glb" },
-            { id: "Sofá", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/modelo3.glb" }
+            { id: "Cadeira", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/model2.glb" },
+            { id: "Sofá", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/model3.glb" }
         ];
         
         let indiceAtual = 0;
