--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         // Substitua 'SEU_UTILIZADOR' e 'SEU_REPOSITORIO' pelos seus dados reais.
         const modelos = [
             // Mude os nomes 'modelo1.glb', 'modelo2.glb', etc., para os nomes exatos dos seus ficheiros.
-            { id: "Mesa", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/stitch_ar.glb" },
-            { id: "Cadeira", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/model2.glb" },
-            { id: "Sofá", path: "https://SEU_UTILIZADOR.github.io/axbdc/ar models/model3.glb" }
+            { id: "Mesa", path: "https://axbdc.github.io/testWebAR/ar models/stitch_ar.glb" },
+            { id: "Cadeira", path: "https://axbdc.github.io/testWebAR/ar models/model2.glb" },
+            { id: "Sofá", path: "https://axbdc.github.io/testWebAR/ar models/model3.glb" }
         ];
         
         let indiceAtual = 0;
